--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1287,7 +1287,7 @@
         android:layout_height="0dp"
         android:elevation="13dp"
         android:animateLayoutChanges="true"
-        app:layout_constraintWidth="parent=0.75"
+        app:layout_constraintWidth="parent=0.8"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editorToolbar">
@@ -1323,8 +1323,8 @@
                     android:id="@+id/saveOptionLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:padding="16dp"
+                    android:background="?selectableItemBackground"
+                    android:padding="12dp"
                     android:clickable="true"
                     android:focusable="true"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -1364,8 +1364,8 @@
                     android:id="@+id/importOptionLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:padding="16dp"
+                    android:background="?selectableItemBackground"
+                    android:padding="12dp"
                     android:clickable="true"
                     android:focusable="true"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -1405,8 +1405,8 @@
                     android:id="@+id/resetOptionLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:padding="16dp"
+                    android:background="?selectableItemBackground"
+                    android:padding="12dp"
                     android:clickable="true"
                     android:focusable="true"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -1445,9 +1445,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
-                        android:clickable="false"
-                        android:focusable="false"
                         android:background="@null"
+                        android:visibility="invisible"
                         android:padding="8dp"
                         android:src="@drawable/ic_check_24"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -1459,9 +1458,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
-                        android:clickable="false"
-                        android:focusable="false"
                         android:background="@null"
+                        android:visibility="invisible"
                         android:padding="8dp"
                         android:src="@drawable/ic_close_24"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -1474,8 +1472,8 @@
                     android:id="@+id/advancedOptionLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="?selectableItemBackgroundBorderless"
-                    android:padding="16dp"
+                    android:background="?selectableItemBackground"
+                    android:padding="12dp"
                     android:clickable="true"
                     android:focusable="true"
                     app:layout_constraintEnd_toEndOf="parent"
