--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1578,6 +1578,7 @@
                 android:background="?selectableItemBackgroundBorderless"
                 android:clipToOutline="true"
                 android:clipToPadding="true"
+                android:visibility="gone"
                 android:elevation="10dp"
                 android:clickable="true"
                 android:focusable="true">
