--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -48,7 +48,7 @@
         android:id="@+id/toolbarDivider"
         android:layout_width="1dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginVertical="10dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,9 +59,11 @@
         android:id="@+id/drawerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="16dp"
         android:src="@drawable/ic_baseline_menu_thin_24"
         android:layout_marginEnd="16dp"
+        android:elevation="8dp"
         android:background="?selectableItemBackgroundBorderless"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/editorToolbar"
