--- a/app/src/main/res/layout/activity_theme_settings.xml
+++ b/app/src/main/res/layout/activity_theme_settings.xml
@@ -378,7 +378,7 @@
                     android:id="@+id/themeStyleTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Style"
+                    android:text="@string/style"
                     android:textSize="16sp"
                     android:textColor="@color/white"
                     android:layout_marginStart="24dp"
@@ -584,7 +584,7 @@
                     android:id="@+id/themeColorTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Color"
+                    android:text="@string/color"
                     android:textSize="16sp"
                     android:textColor="@color/white"
                     android:layout_marginStart="24dp"
